FIX Issue with alignment of legacy drop downs

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -78,7 +78,7 @@
 .api-links-end {
   flex-grow: 1;
   border-right: none;
-  text-align: right;
+  text-align: left;
 }
 
 .api-links select {
